Change: pdf view page design

--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <div id="root"></div>  <!-- React will mount here -->
+  
+  <!-- Add PDF.js script here, before the closing body tag -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 </body>
 </html>
