--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dilly Tally</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:wght@500&family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div id="root"></div>  <!-- React will mount here -->
